<resources>
    <string name="app_name">FinaleAndroid</string>
    <string name="configuration">Configuration</string>
    <string name="enregistrer_courriel">Enregistrer Courriel</string>
    <string name="historique_des_parties">Historique des parties</string>
    <string name="commencer_une_partie">Commencer une partie</string>
    <string name="courriel">Courriel</string>
    <string name="veuillez_entrez_votre_courriel_pour_pouvoir_jouer_au_jeu">Veuillez entrer votre courriel pour pouvoir jouer au jeu:</string>
    <string name="mastermind">MASTERMIND</string>
    <string name="enregistrer_les_modifications">Enregistrer les modifications</string>
    <string name="longeur_du_code">Longeur du code:</string>
    <string name="nombre_de_couleurs">Nombre de couleurs:</string>
    <string name="nombre_de_tentatives">Nombre de tentatives:</string>
    <string name="abandonner">Abandonner</string>
    <string name="menu_principale">Menu principale</string>
    <string name="nouvelle_partie">Nouvelle partie</string>
    <string name="valider_la_tentative">Valider la tentative</string>
    <string name="btnRetourHistorique">Retour</string>
</resources>